Associate every object with the resource
Get resource name via `/gimme` and call `/destroy/<resource name>/` when its destroyed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,6 +54,7 @@
             fruitSize,
             score = 0,
             labels = {},
+            resources = {},
             points = [];
 
         var fireRate = 1400;
@@ -141,9 +142,18 @@
             obj.height = obj.width = fruitSize;
             obj.body.angularAcceleration = getRandomAngularAcceleration();
             game.physics.arcade.moveToXY(obj, game.world.centerX, game.world.centerY, getRandomSpeed());
-            var label = game.add.text(0, 0, "hello", label_style);
+            var resource = getRandomResource();
+            var label = game.add.text(0, 0, resource, label_style);
             label.alpha = 0.7;
             labels[obj.key] = label;
+            resources[obj.key] = resource;
+        }
+
+        function getRandomResource() {
+            fetch(backend + '/gimme')
+                .then(response => response.blob())
+                .then(data => {return data});
+
         }
 
         function throwBadObject() {
@@ -282,7 +292,12 @@
             fruit.kill();
             points = [];
             updateScore(score + 1);
-            fetch(backend+'/kill');
+
+            if (fruit.key in resources) {
+                fetch(backend+'/destroy'+resources[fruit.key]);
+                delete resources[fruit.key];
+            }
+
             if (fruit.key in labels) {
                 labels[fruit.key].kill();
                 delete labels[fruit.key];
