Move api calls to /api
This would simplify ingress rules

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,9 +21,9 @@
 
     <script>
         // Local debugging
-        var backend = "http://localhost:8081"
+        // var backend = "http://localhost:8081/api"
         // Production - use the same URL
-        // var backend = ""
+        var backend = "/api"
 
         var w = window.innerWidth,
             h = window.innerHeight;
