--- a/frontend/index.html
+++ b/frontend/index.html
@@ -199,9 +199,9 @@
             return (((Math.random() * game.world.width) - game.world.centerX) * 0.6) + game.world.centerX;
         }
 
-        // get random value from 0 and screen's height, up to max 50
+        // get random value from 200 and screen's height
         function getRandomSpeed() {
-            return Math.max(Math.random() * game.world.height, 50);
+            return Math.max(Math.random() * game.world.height, 200);
         }
 
         function getInput() {
