--- a/frontend/index.html
+++ b/frontend/index.html
@@ -148,6 +148,7 @@
                     var label = game.add.text(0, 0, resourceText, label_style);
                     label.setTextBounds(0, 0, fruitSize, fruitSize);
                     label.alpha = 0.7;
+                    label.anchor.setTo(0.5, 0.5);
                     obj.addChild(label);
                 } else {
                     label = obj.getChildAt(0);
