--- a/frontend/index.html
+++ b/frontend/index.html
@@ -203,9 +203,9 @@
             return (((Math.random() * game.world.width) - game.world.centerX) * 0.6) + game.world.centerX;
         }
 
-        // get random pixels per second speec, up to 50
+        // get random pixels per second speed, between 10 and 20
         function getRandomSpeed() {
-            return Math.max(Math.random() * game.world.height, 10);
+            return Math.max(Math.random() * game.world.height, 10) + 10;
         }
 
         function getInput() {
