Add debug info about fruits

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -164,7 +164,9 @@
                 obj.body.angularAcceleration = getRandomAngularAcceleration();
                 obj.reset(getRandomX(), game.world.height);
                 obj.data = resource;
-                game.physics.arcade.moveToXY(obj, game.world.centerX, game.world.centerY, getRandomSpeed());
+                var speed = getRandomSpeed()
+                console.log(`type: ${obj.key} angular: ${obj.body.angularAcceleration} x: ${obj.x} y: ${obj.y} angle: ${angle} speed: ${speed}`)
+                game.physics.arcade.moveToXY(obj, game.world.centerX, game.world.centerY, speed);
             })
         }
 
