frontend/index.html: increase font size

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,8 +81,8 @@
             emitter.setScale(0.15, 0.3, 0.15, 0.3);
             emitter.setYSpeed(-400, 400);
 
-            fontSize = game.world.width < 500 ? 24 : 40;
-            label_style.font = fontSize-5 + "px Arial";
+            fontSize = game.world.width < 500 ? 32 : 40;
+            label_style.font = fontSize + "px Arial";
             fruitSize = Math.round(Math.min(game.world.width, game.world.height) * 0.25);
 
             createText();
